--- a/BolWallet/Pages/CreateCodenameIndividualPage.razor
+++ b/BolWallet/Pages/CreateCodenameIndividualPage.razor
@@ -3,6 +3,10 @@
 @inherits MvvmComponentBase<CreateCodenameIndividualViewModel>
 
 <MudThemeProvider />
+<MudOverlay Visible="ViewModel.IsLoading" DarkBackground="true">
+    <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
+</MudOverlay>
+
 <div style="overflow-y: auto">
     <MudForm @ref="form" FieldChanged="FieldChanged" @bind-Errors="@errors" Class="pa-4">
         <MudGrid>
