--- a/BolWallet/Views/TransactionsPage.xaml
+++ b/BolWallet/Views/TransactionsPage.xaml
@@ -2,116 +2,16 @@
     x:Class="BolWallet.Views.TransactionsPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:pages="clr-namespace:BolWallet.Pages"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-    xmlns:models="clr-namespace:BolWallet.Models"
     x:DataType="viewModels:TransactionsViewModel"
     Title="{Binding TransactionsLabel}"
     BackgroundColor="{DynamicResource SecondaryColor}">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem 
-            Text="Hide All"
-            Command="{Binding HideAllTransactionDetailsCommand}"
-            Order="Primary" 
-            Priority="0" />
-    </ContentPage.ToolbarItems>
-    <Grid Padding="30,0">
-        <ListView
-            VerticalOptions="FillAndExpand"
-            SeparatorVisibility="None"
-            VerticalScrollBarVisibility="Never"
-            HorizontalScrollBarVisibility="Never"
-            HasUnevenRows="True"
-            SelectionMode="Single"
-            ItemsSource="{Binding Transactions}"
-            ItemSelected="ListView_ItemSelected">
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:BolTransactionEntryListItem">
-                    <ViewCell>
-                        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" Padding="0,4" Spacing="0">
-							<Grid>
-								<Frame BackgroundColor="#582cd4" Padding="32" >
-									<StackLayout Orientation="Vertical">
-										<Label
-                                        TextColor="White"
-                                        FontSize="8"
-                                        FontAttributes="Bold"
-                                        HorizontalOptions="Start"
-                                        Text="{Binding BolTransactionEntry.TransactionHash}"/>
-										<Label
-                                            TextColor="{Binding AmountTextColor}"
-                                            FontAttributes="Bold"
-                                            FontSize="16"
-                                            HorizontalOptions="End"
-                                            Text="{Binding BolAmount}"/>
-									</StackLayout>
-								</Frame>
-							</Grid>
-                            <Frame CornerRadius="0"
-                            IsVisible="{Binding IsExpanded}"
-                            BackgroundColor="DarkGray">
-                                <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" Spacing="8">
-                                    <StackLayout Orientation="Vertical">
-                                        <Label
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        Text="Transaction Type: "/>
-                                        <Label TextColor="Black" Text="{Binding BolTransactionEntry.TransactionType}"/>
-                                    </StackLayout>
-                                    <StackLayout Orientation="Vertical">
-                                        <Label
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        Text="Sender Codename: "/>
-                                        <Label TextColor="Black" Text="{Binding BolTransactionEntrySenderCodeName}"/>
-                                    </StackLayout>
-                                    <StackLayout Orientation="Vertical">
-                                        <Label
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        Text="Sender address: "/>
-                                        <Label TextColor="Black" Text="{Binding BolTransactionEntrySenderAddress}"/>
-                                    </StackLayout>
-                                    <StackLayout Orientation="Vertical">
-                                        <Label
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        Text="Receiver Codename: "/>
-                                        <Label TextColor="Black" Text="{Binding BolTransactionEntryReceiverCodeName}"/>
-                                    </StackLayout>
-                                    <StackLayout Orientation="Vertical">
-                                        <Label
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        Text="Receiver Address: "/>
-                                        <Label TextColor="Black" Text="{Binding BolTransactionEntryReceiverAddress}"/>
-                                    </StackLayout>
-                                    <StackLayout Orientation="Vertical">
-                                        <Label
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        Text="Amount: "/>
-                                        <Label TextColor="Black" Text="{Binding BolAmount}"/>
-                                    </StackLayout>
-                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="8">
-                                        <Button
-                                            HorizontalOptions="Start"
-                                            Text="Details"
-                                            CommandParameter="{Binding BolTransactionEntry.TransactionHash}"
-                                            Clicked="OnOpenInBrowserClicked">
-                                        </Button>
-                                        <Button
-                                            HorizontalOptions="EndAndExpand"
-                                            Text="Copy Hash"
-                                            CommandParameter="{Binding BolTransactionEntry.TransactionHash}"
-                                            Clicked="OnCopyButtonClicked">
-                                        </Button>
-                                    </StackLayout>
-                                </StackLayout>
-                            </Frame>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </Grid>
+    
+    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+        <BlazorWebView.RootComponents>
+            <RootComponent Selector="#app" ComponentType="{x:Type pages:Transactions}" />
+        </BlazorWebView.RootComponents>
+    </BlazorWebView>
+    
 </ContentPage>
