--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -119,13 +119,13 @@
     UserData userData;
 
     List<(string, MudBlazor.Color, string, string)> CitizeshipsDocuments = new()
-      {
-          {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Front Side of Identity Card", "") },
-          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card-Resubmit front side if not exist.", "") },
-          {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
-          {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
-          {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
-      };
+    {
+        {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Identity Card (front)", "") },
+        {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Identity Card (back)", "") },
+        {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
+        {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
+        {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
+    };
 
     Dictionary<string, string> NinErrorMessages = new Dictionary<string, string>();
 
@@ -139,11 +139,11 @@
 
         CitizeshipsDocuments = new()
         {
-          {new(nameof(CitizenshipHashTable.IdentityCard),Color.Transparent, "Front Side of Identity Card", "") },
-          {new(nameof(CitizenshipHashTable.IdentityCardBack),Color.Transparent, "Back Side of Identity Card-Resubmit front side if not exist.", "") },
-          {new(nameof(CitizenshipHashTable.Passport),Color.Transparent, "Passport", "") },
-          {new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
-          {new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
+            { new(nameof(CitizenshipHashTable.IdentityCard), Color.Transparent, "Identity Card (front)", "") },
+            { new(nameof(CitizenshipHashTable.IdentityCardBack), Color.Transparent, "Identity Card (back)", "") },
+            { new(nameof(CitizenshipHashTable.Passport), Color.Transparent, "Passport", "") },
+            { new(nameof(CitizenshipHashTable.ProofOfNin), Color.Transparent, "Proof Of Nin", "") },
+            { new(nameof(CitizenshipHashTable.BirthCertificate), Color.Transparent, "Birth Certificate", "") }
         };
 
         foreach (var encryptedCitizenshipForm in userData.EncryptedCitizenshipForms)
@@ -162,6 +162,7 @@
                         await UpdateIdentificationDocumentsList(propertyInfo.Name, "Uploaded");
                 }
 
+                StateHasChanged();
                 return;
             }
         }
@@ -171,11 +172,12 @@
 
     private async Task UploadFile(string property, EncryptedCitizenshipForm encryptedCitizenshipForm)
     {
-        var customFileType = new FilePickerFileType(new Dictionary<DevicePlatform, IEnumerable<string>> {
-        { DevicePlatform.iOS, new[] { "com.adobe.pdf", "public.image", "public.audio" } },
-        { DevicePlatform.Android, new[] { "application/pdf", "image/*", "audio/*" } },
-        { DevicePlatform.MacCatalyst, new[] { "pdf", "png", "jpeg", "jpg", "public.image", "public.audio" } },
-        { DevicePlatform.WinUI, new[] { ".pdf", ".gif", ".mp3", ".png", ".jpg", ".jpeg" } },
+        var customFileType = new FilePickerFileType(new Dictionary<DevicePlatform, IEnumerable<string>>
+        {
+            { DevicePlatform.iOS, new[] { "com.adobe.pdf", "public.image", "public.audio" } },
+            { DevicePlatform.Android, new[] { "application/pdf", "image/*", "audio/*" } },
+            { DevicePlatform.MacCatalyst, new[] { "pdf", "png", "jpeg", "jpg", "public.image", "public.audio" } },
+            { DevicePlatform.WinUI, new[] { ".pdf", ".gif", ".mp3", ".png", ".jpg", ".jpeg" } },
         });
 
         try
@@ -381,4 +383,5 @@
                  citizenshipHashTable.ProofOfNin == Bol.Core.Constants.HASH_ZEROS &&
                  citizenshipHashTable.BirthCertificate == Bol.Core.Constants.HASH_ZEROS);
     }
+
 }
