Correct misleading message

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -362,7 +362,7 @@
                 // https://github.com/CommunityToolkit/Maui/issues/1752
                 try
                 {
-                    await Toast.Make($"Please provide at least one verification document for {form.CountryName} Citizenship").Show();
+                    await Toast.Make($"Providing your Identity card  for {form.CountryName} Citizenship is mandatory.").Show();
                 }
                 catch (Exception e)
                 {
