Rename form field due to reserved keyword

--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -3,40 +3,45 @@
 @inherits MvvmComponentBase<GenerateWalletWithPasswordViewModel>
 @inject INavigationService NavigationService
 
-<MudThemeProvider />
+<MudThemeProvider/>
 
     <MudOverlay Visible="ViewModel.IsLoading" DarkBackground="true">
         <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
         <MudText>@ViewModel.WalletCreationProgress</MudText>
-    </MudOverlay>
-    <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
-        <DataAnnotationsValidator />
-        <MudGrid>
-            <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
-                <MudCard>
-                    <MudCardContent>
+    </MudStack>
+</MudOverlay>
 
-                        <MudTextField Immediate=true Label="Password" HelperText="Choose a strong password" Class="mt-3"
-                                      @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password" />
-                        <MudTextField Immediate=true Label="Password" HelperText="Repeat the password" Class="mt-3"
-                                      @bind-Value="model.Password2" For="@(() => model.Password2)" InputType="InputType.Password" />
-                    </MudCardContent>
-                    <MudCardActions>
-                        <MudButton ButtonType="MudBlazor.ButtonType.Submit"
-                                   Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Class="ml-auto">Create Your Wallet</MudButton>
-                    </MudCardActions>
-                </MudCard>
-            </MudItem>
-        </MudGrid>
-    </EditForm>
+<EditForm Model="@passwordForm" OnValidSubmit="OnValidSubmit">
+    <DataAnnotationsValidator/>
+    <MudGrid>
+        <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
+            <MudCard>
+                <MudCardContent>
+
+                    <MudTextField Immediate="true" Label="Password" HelperText="Choose a strong password" Class="mt-3"
+                                  @bind-Value="passwordForm.Password" For="@(() => passwordForm.Password)" InputType="InputType.Password"/>
+                    <MudTextField Immediate="true" Label="Password Confirmation" HelperText="Repeat the password" Class="mt-3"
+                                  @bind-Value="passwordForm.Password2" For="@(() => passwordForm.Password2)" InputType="InputType.Password"/>
+                </MudCardContent>
+                <MudCardActions>
+                    <MudButton ButtonType="MudBlazor.ButtonType.Submit"
+                               Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Class="ml-auto">
+                        Create Your Wallet
+                    </MudButton>
+                </MudCardActions>
+            </MudCard>
+        </MudItem>
+    </MudGrid>
+</EditForm>
+
 @code {
-    PasswordForm model = new PasswordForm();
+    PasswordForm passwordForm = new PasswordForm();
 
     private async Task OnValidSubmit(EditContext context)
     {
         await InvokeAsync(() => StateHasChanged());
 
-        ViewModel.Password = model.Password;
+        ViewModel.Password = passwordForm.Password;
         await ViewModel.SubmitCommand.ExecuteAsync(null);
 
         await InvokeAsync(() => StateHasChanged());
