Fix loading spinner alignment

--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -5,8 +5,9 @@
 
 <MudThemeProvider/>
 
-    <MudOverlay Visible="ViewModel.IsLoading" DarkBackground="true">
-        <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
+<MudOverlay Visible="ViewModel.IsLoading" DarkBackground="true">
+    <MudStack AlignItems="AlignItems.Center">
+        <MudProgressCircular Color="Color.Primary" Indeterminate="true"/>
         <MudText>@ViewModel.WalletCreationProgress</MudText>
     </MudStack>
 </MudOverlay>
