Clean up view model and use MediaService to simplify methods

--- a/BolWallet/Pages/CreateEdiCompanyPage.razor
+++ b/BolWallet/Pages/CreateEdiCompanyPage.razor
@@ -82,7 +82,7 @@
 
     private async Task GetFile(string property)
     {
-        await createCompanyEdiViewModel.PickPhotoCommand.ExecuteAsync(property);
+        await createCompanyEdiViewModel.PickFileCommand.ExecuteAsync(property);
 
         await UpdateIdentificationDocumentsList(property);
     }
