Update informational messages with the latest fee and collateral values

--- a/BolWallet/Pages/RegisterAsCertifierPage.razor
+++ b/BolWallet/Pages/RegisterAsCertifierPage.razor
@@ -23,8 +23,8 @@
                     <MudText>1) For certifier registration, must have at least 4 certifications.</MudText>
                     <MudText>2) Select the countries for which you will offer your certification services.</MudText>
                     <MudText>3) Set the fee you will charge for your services.</MudText>
-                    <MudText>4) Add 1000 bol as collateral to the first commercial address.</MudText>
-                    <MudText>5) Please note that there is a maximum fee limit that you can set for your certification services.</MudText>
+                    <MudText>4) Add 100 bol as collateral to your first commercial address. They will be reserved for as long as you are a certifier.</MudText>
+                    <MudText>5) Please note that there is a maximum fee limit of 0,05b that you can set for your certification services.</MudText>
 
                     <MudSelect T="string" Label="Countries" Required="true" HelperText="Supported Countries as Certifier" MultiSelection="true" @bind-SelectedValues="registerAsCertifierForm.Countries">
                         <MudSelectItem T="string" Value="@("ALL")">Global</MudSelectItem>
